tests/fixtures/invalid/max_dict_dict.py
# Cannot call max() with Dict[str, int], Dict[str, int]
x = max({"a": 1}, {"a": 1})
